  * Huge refactoring and code simplification
  * Port to Qt 5.x
  * Livestatus is now the default mode selected for retrieving monitoring data
    when setting Nagios-based sources. The use of ngrt4nd needs to be explicitly
    enabled
  * Fixed ticket #25 enabling the ability to cancel the basic authentication for
    Nagios
  * Fixed close action on preference window (ticket #24)
  * Changed piechart position from the map to lelf side

2.4.0 (Federator) - 08/09/2013
  * Fixed ticket #22 : Operations Console doesn't update the status of triggers with Zabbix API v1.4 (Zabbix 2.0.x, x<5)
  * Fixed close action on the preference window (ticket #24)

2.4.0 (Federator) - 08/09/2013
  * Fixed compilation issue on OS X related to basename and QString (ticket #20)
  * Fixed install script for OS X (ticket #21): removed the use of lscpu
    and added option to set the number of CPU
  * Improved install script enabling user mode installation
  * comes with ngrt4n-d4n that brings support for ZeroMQ 3.x

2.4.0beta2 (Federator,b2) - 16/08/2013
  * Fixed ticket #16: adding support for realm authentication within the browser
  * Fixed ticket #17: file path missing in the title bar of the console
  * Fixed ticket #18: Added the possibility to select the source to load within the browser
  * Added logo and misc icons for Nagios, Zenoss, Zenoss, and hierarchy

2.4.0beta1 (Federator,b1) - 08/08/2013
  * Improved support for overriding SSL peer verification
  * Added support for multisources management, up to 10 sources supported
  * Lot of refactoring, imporving loading and updating
  * Added splash screen when loading configuration
  * Added support for dragging and scrolling from the map
  * Added workaround for ticket #13 adding option to override host verification
  * Fixed ticket #14 related to chart panel repositionning
  * Password manager is not longer execute through the configuration wizard

2.3.1 (Briator, p1) - 23/06/2013