@@ -36,53 +36,35 @@ PieChart::PieChart(const QRectF& chartArea, QWidget * _parent)
 PieChart::~PieChart()
 {
   delete m_legend;
-  m_slices.clear();
 }
 
 void PieChart::paintEvent(QPaintEvent*)
 {
+  QPainter painter(this);
   qint32 critical_count = m_statsData[ngrt4n::Critical];
   qint32 major_count = m_statsData[ngrt4n::Major];
   qint32 minor_count = m_statsData[ngrt4n::Minor];
   qint32 ok_count =  m_statsData[ngrt4n::Normal];
   qint32 unknown_count = m_nbStatsEntries - (critical_count + major_count + minor_count + ok_count);
 
-  float critical_ratio= (100.0 * critical_count)/m_nbStatsEntries;
-  float major_ratio = (100.0 * major_count)/m_nbStatsEntries;
-  float minor_ratio = (100.0 * minor_count)/m_nbStatsEntries;
-  float unknown_ratio = (100.0 * unknown_count)/m_nbStatsEntries;
-  float ok_ratio = (100.0 * ok_count)/m_nbStatsEntries;
+  int critical_ratio= 16 * (100.0 * critical_count)/m_nbStatsEntries;
+  int major_ratio = 16 * (100.0 * major_count)/m_nbStatsEntries;
+  int minor_ratio = 16 * (100.0 * minor_count)/m_nbStatsEntries;
+  int unknown_ratio = 16 * (100.0 * unknown_count)/m_nbStatsEntries;
+  int ok_ratio = 16 * (100.0 * ok_count)/m_nbStatsEntries;
 
-  m_slices[ngrt4n::Critical] =
-      new PieChartItem(m_boundingRect,
-                       0,
-                       3.6 * critical_ratio,
-                       ngrt4n::COLOR_CRITICAL,
-                       this);
-  m_slices[ngrt4n::Major] =
-      new PieChartItem(m_boundingRect,
-                       3.6 * critical_ratio,
-                       3.6 * major_ratio,
-                       ngrt4n::COLOR_MAJOR,
-                       this);
-  m_slices[ngrt4n::Minor] =
-      new PieChartItem(m_boundingRect,
-                       3.6 * (critical_ratio + major_ratio),
-                       3.6 * minor_ratio,
-                       ngrt4n::COLOR_MINOR,
-                       this);
-  m_slices[ngrt4n::Unknown] =
-      new PieChartItem(m_boundingRect,
-                       3.6 * (critical_ratio + major_ratio + minor_ratio),
-                       3.6 * unknown_ratio,
-                       ngrt4n::COLOR_UNKNOWN,
-                       this);
-  m_slices[ngrt4n::Normal] =
-      new PieChartItem(m_boundingRect,
-                       3.6 * (critical_ratio + major_ratio + minor_ratio + unknown_ratio),
-                       3.6 * ok_ratio,
-                       ngrt4n::COLOR_NORMAL,
-                       this);
+  painter.setPen(Qt::transparent);
+  painter.setBrush(ngrt4n::COLOR_CRITICAL);
+  painter.drawPie(m_boundingRect, 0, 3.6 * critical_ratio);
+  painter.setBrush(ngrt4n::COLOR_MAJOR);
+  painter.drawPie(m_boundingRect, 3.6 * critical_ratio, 3.6 * major_ratio);
+  painter.setBrush(ngrt4n::COLOR_MINOR);
+  painter.drawPie(m_boundingRect, 3.6 * (critical_ratio + major_ratio), 3.6 * minor_ratio);
+  painter.setBrush(ngrt4n::COLOR_UNKNOWN);
+  painter.drawPie(m_boundingRect, 3.6 * (critical_ratio + major_ratio + minor_ratio), 3.6 * unknown_ratio);
+  painter.setBrush(ngrt4n::COLOR_NORMAL);
+  painter.drawPie(m_boundingRect, 3.6 * (critical_ratio + major_ratio + minor_ratio + unknown_ratio), 3.6 * ok_ratio);
+
   QString toolTip = QObject::tr("Normal: ")%QString::number(ok_count)%
       "/"%QString::number(m_nbStatsEntries)%" ("%QString::number(ok_ratio, 'f', 0)%"%)"
       %"\n"%QObject::tr("Minor: ")%QString::number(minor_count)%
