@@ -10,7 +10,8 @@ RealOpInsight ChangeLog
   * Fixed ticket #25 enabling the ability to cancel the basic authentication for
     Nagios
   * Fixed close action on preference window (ticket #24)
-  * Changed piechart position from the map to lelf side
+  * Moved piechart from the map to lelf side
+  * Improved charting rendering: cleanup and new algorithm
 
 2.4.0 (Federator) - 08/09/2013
   * Fixed ticket #22 : Operations Console doesn't update the status of triggers with Zabbix API v1.4 (Zabbix 2.0.x, x<5)
